Modernize all the things
- Building
  - Update deps and modernize rebar.config
  - Use rebar3_erlydtl_plugin
  - Simplify Makefile by using rebar3
  - Delete bin/lfetool
  - Delete package.exs
- Housekeeping
  - Move templates to priv/templates
  - Word wrap README.md and delete outated advice
    - TODO: Write the new Running section
  - Update .gitignore and .travis.yml
  - Fix up .app.src
  - Rename app to avoid hyphens, so we can generate releases
- Syntax/conventions
  - Prefer (m:f ...) to (: m f ...)
  - Prefer modern literals or quasiquoting to named constructors
  - Add docstrings, including at the module level
  - KISS in lfe-elli-example-sup
- Testing
  - Fix rebar.config issues wrt test directories
  - Move (and rename) the unit tests
  - Use elli_test:call/5 instead of actually starting the server
  - Use is-match instead of is-equal

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
-deps
+*.beam
+*.dump
 *.sublime-project
 *.sublime-workspace
-*.beam
 .eunit
-debug-*
-ebin/*
-bin/expm
-*.dump
-.rebar
+_build/
+deps
