--- a/rebar.config
+++ b/rebar.config
@@ -1,20 +1,69 @@
-{erl_opts, [debug_info, {src_dirs, ["test/unit",
-                                    "test/integration",
-                                    "test/system"]}]}.
-{lfe_first_files, []}.
-{deps_dir, ["deps"]}.
-{eunit_compile_opts, [
-   {src_dirs, ["test/unit",
-               "test/integration",
-               "test/system",
-               "src"]}
-  ]}.
-{deps, [
-   {lfe, ".*", {git, "git://github.com/rvirding/lfe.git", {branch, "master"}}},
-   {lutil, ".*", {git, "git://github.com/lfex/lutil.git", {branch, "master"}}},
-   {ltest, ".*", {git, "git://github.com/lfex/ltest.git", {branch, "master"}}},
-   {elli, ".*", {git, "http://github.com/knutin/elli.git", {branch, "master"}}},
-   {erlydtl, ".*", {git, "https://github.com/erlydtl/erlydtl.git", {branch, "master"}}}
-  ]}.
+%%% Deps
 
-{erlydtl_opts, [{out_dir, "ebin"}, {compiler_options, []}, {source_ext, ".html"}]}.
+{deps, [{lfe, "1.1.1"}, {elli, "1.0.5"}, {erlydtl, "0.12.0"}]}.
+
+%%% Profiles
+
+{profiles, [
+  {test, [
+    {erl_opts, [{src_dirs, ["src", "test"]}]},
+    {eunit_compile_opts, [{src_dirs, ["test", "src"]}]},
+    {deps, [{ltest, {git, "git://github.com/lfex/ltest.git", {tag, "0.9.0"}}}]}
+  ]}
+]}.
+
+%%% Release
+
+{relx, [
+  {release, {lfe_elli_example, "0.1.0"},
+   [lfe_elli_example, {elli, load}]},
+  {extended_start_script, true},
+  {dev_mode,              true},
+  {include_erts,          false}
+]}.
+
+%%% Plugins
+
+{plugins, [
+  {'lfe-compile',
+    {git, "git://github.com/lfe-rebar3/compile.git",
+     {tag, "0.5.0"}}},
+  {rebar3_erlydtl_plugin,
+   {git, "git://github.com/tsloughter/rebar3_erlydtl_plugin.git",
+    {branch, "master"}}}
+]}.
+
+{project_plugins, [
+  {lodox, {git, "git://github.com/lfe-rebar3/lodox.git", {tag, "0.15.1"}}}
+]}.
+
+%%% Hooks
+
+{provider_hooks, [
+  {pre, [{compile, {erlydtl, compile}}, {compile, {lfe, compile}}]}
+]}.
+
+%%% ErlyDTL
+
+{erlydtl_opts, [
+  {doc_root, "priv/templates"},
+  {compiler_options, []},
+  {source_ext, ".html"}
+]}.
+
+%%% Lodox
+
+{lodox, [
+  {apps, [
+    {lfe_elli_example, [
+      {'output-path', "docs"},
+      {'source-uri',
+       "https://github.com/lfex/lfe-elli-example"
+       "/blob{version}/{filepath}#L{line}}"},
+      {'excluded-modules', [
+        'lfe-elli-example-sup',
+        'lfe-elli-example-app'
+      ]}
+    ]}
+  ]}
+]}.
