--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: erlang
-script: "make check-travis"
-notifications:
-  recipients:
-    - greg@purple-dogfish.co.uk
+install: true
+before_script:
+  - wget https://s3.amazonaws.com/rebar3/rebar3
+  - chmod +x rebar3
+env: PATH=".:$PATH"
+script: make check
 otp_release:
-  - 17.0
+  - 19.0
+  - 18.2
+  - 17.5
   - R16B03-1
   - R15B03
